[build-system]
requires = ["poetry-core>=5.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SH_file_menadger"
version = "1.1.0"
description = "не сложный файловый менаджер"
authors = ["Yarik mutg <@HITHELL.com>"]
license = "MIT"
repository ="https://github.com/xHak2215/fiegell"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = { version = "^ 2.1.1",optional = true }

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.extras]
docs = ["sphinx"]


