[build-system]
requires = ["poetry-core>=2.1.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SH_file_menadger"
version = "1.4.0"
description = "не сложный файловый менаджер с псевдо графикой"
authors = ["hit<@HITHELL.com>"]
license = "MIT"
repository ="https://github.com/xHak2215/fiegell"

[tool.poetry.dependencies]
python = "^3.12"
keyboard = {version = "0.13.5", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.extras]
docs = ["sphinx"]


